2016-06-23 Peter Onyisi <ponyisi@cern.ch>
	* Update lepton trigger matching
	* Fix Higgs mass hypothesis in xsec files

2016-06-23 Marco Milesi <marco.milesi@cern.ch>
	* Fixing check on ISR/FSR photon for QMisID case
	* Make sure default values for truth branches are assigned correctly

2016-06-23 Robert Wolff <robert.wolff@cern.ch>
	* Working version with AnalysisTop,2.4.12
	* random RunNumber/RunYear for MC from PURW tool

2016-06-09 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Update b-tagging SF nominal and uncertainties function calls
	* Uncomment the PURW instance in data15/16 config (needed by Muon SF tools)
	* Working version with AnalysisTop,2.4.10

2016-06-08  David Hohn  <david.hohn@cern.ch>
	* protect MET_Truth in data
	* overlap flags not working yet
	* tag ttHMultiAna-02-04-06
	** lets follow the AnalysisTop version numbers...

2016-06-07 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Add more electron 2016 triggers in TRIGDEC in configs
	* Tag ttHMultiAna-00-01-09

2016-06-07 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Include TopAnalysis-00-04-36 in setupRCandGrid.sh

2016-06-07  Marco Milesi  <marco.milesi@cern.ch>
	* Add TruhtMatchAlgo class to perform truth matching. In particular, get truth QMisID match.
	* Add truth matching variables for reco leptons, and truth MET as well

2016-06-07 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Using "Standard" ASG OLR (still specifying LHLoose for TauEle to work with p2613 derivations)

2016-06-04  David Hohn  <david.hohn@cern.ch>
	* clean up our tools a bit, take them from Top tool store when possible

2016-06-03  David Hohn  <david.hohn@cern.ch>
	* use PMGCorrsAndSysts to save Sherpa 2.2 Njet weight
	** update your setup script to check out PMGTools

2016-06-02  David Hohn  <david.hohn@cern.ch>
	* enable writing non-prompt lep tagging variables

2016-05-29  David Hohn  <david.hohn@cern.ch>