@@ -443,6 +443,18 @@ void ttHMultileptonLooseEventSaver::initialize(std::shared_ptr<top::TopConfig> c
     Wrap2(elevec, [=](const xAOD::Electron& ele) { return (char) ele.auxdataConst<char>("sharesTrk"); },  *systematicTree, "electron_sharesTrk");
     Wrap2(elevec, [=](const xAOD::Electron& ele) { return (char) ele.auxdataConst<char>("ttHpassOVR"); }, *systematicTree, "electron_passOR");
 
+    //non-prompt bdt vars
+    Wrap2(elevec, [=](const xAOD::Electron& ele) {
+	  float m_el_nonprompt_bdt = -99.;
+	  static SG::AuxElement::Accessor<float> AccessorNonPromptBDT("PromptLepton_TagWeight");
+	  if(AccessorNonPromptBDT.isAvailable(ele)) m_el_nonprompt_bdt = AccessorNonPromptBDT(ele);
+	  return (float) m_el_nonprompt_bdt; }, *systematicTree, "electron_PromptLepton_TagWeight");
+    Wrap2(elevec, [=](const xAOD::Electron& ele) {
+	short m_el_nonprompt_short = -99;
+	SG::AuxElement::Accessor<short> AccessorNonPrompt("PromptLepton_TrackJetNTrack");
+	if(AccessorNonPrompt.isAvailable(ele)) m_el_nonprompt_short = AccessorNonPrompt(ele);
+	return (short) m_el_nonprompt_short; }, *systematicTree, "electron_PromptLepton_TrackJetNTrack");
+
     for (std::string trigger_name : triggernames) {
       if( trigger_name.find("_e") == std::string::npos && trigger_name.find("_2e") == std::string::npos ) continue;
       std::string trigmatch_name = "TRIGMATCH_"; trigmatch_name += trigger_name;
@@ -483,13 +495,7 @@ void ttHMultileptonLooseEventSaver::initialize(std::shared_ptr<top::TopConfig> c
       // Add non-prompt electron vars
       Wrap2(elevec, [=](const xAOD::Electron& ele) { return (float) ele.auxdataConst<double>("jetFitterComb"); }, *systematicTree, "electron_jetFitterComb");
 
-      Wrap2(elevec, [=](const xAOD::Electron& ele) {
-	  float m_el_nonprompt_bdt = -99.;
-	  static SG::AuxElement::Accessor<float> AccessorNonPromptBDT("PromptLepton_TagWeight");
-	  if(AccessorNonPromptBDT.isAvailable(ele)) m_el_nonprompt_bdt = AccessorNonPromptBDT(ele);
-	  return (float) m_el_nonprompt_bdt; }, *systematicTree, "electron_PromptLepton_TagWeight");
-
-      std::vector<std::string> short_vars = {"TrackJetNTrack", "sv1_ntkv", "jf_ntrkv"};
+      std::vector<std::string> short_vars = {"sv1_ntkv", "jf_ntrkv"};
       for(std::string var: short_vars) {
 	Wrap2(elevec, [=](const xAOD::Electron& ele) {
 	    short m_el_nonprompt_short = -99;
@@ -500,7 +506,7 @@ void ttHMultileptonLooseEventSaver::initialize(std::shared_ptr<top::TopConfig> c
 
       bool m_writeAllNonPromptInputVars = true;
 
-      if(m_writeAllNonPromptInputVars) {
+      if(m_writeAllNonPromptInputVars) {	
 	std::vector<std::string> float_vars = {"ip2", "ip2_cu", "ip3", "ip3_cu", "EtTopoCone20Rel"};
 	for(std::string var: float_vars) {
 	  Wrap2(elevec, [=](const xAOD::Electron& ele) {
@@ -551,6 +557,18 @@ void ttHMultileptonLooseEventSaver::initialize(std::shared_ptr<top::TopConfig> c
 
     Wrap2(elevec, [=](const xAOD::Muon& mu) { return (char) mu.auxdataConst<char>("sharesTrk"); },  *systematicTree, "muon_sharesTrk");
     Wrap2(muvec, [=](const xAOD::Muon& mu) { return (float) mu.auxdataConst<char>("ttHpassOVR"); }, *systematicTree, "muon_passOR");
+
+    //non-prompt bdt vars
+    Wrap2(muvec, [=](const xAOD::Muon& mu) {
+	  float m_mu_nonprompt_bdt = -99.;
+	  static SG::AuxElement::Accessor<float> AccessorNonPromptBDT("PromptLepton_TagWeight");
+	  if(AccessorNonPromptBDT.isAvailable(mu)) m_mu_nonprompt_bdt = AccessorNonPromptBDT(mu);
+	  return (float) m_mu_nonprompt_bdt; }, *systematicTree, "muon_PromptLepton_TagWeight");
+    Wrap2(muvec, [=](const xAOD::Muon& mu) {
+	short m_mu_nonprompt_short = -99;
+	static SG::AuxElement::Accessor<short> AccessorNonPrompt("PromptLepton_TrackJetNTrack");
+	if(AccessorNonPrompt.isAvailable(mu)) m_mu_nonprompt_short = AccessorNonPrompt(mu);
+	return (short) m_mu_nonprompt_short; }, *systematicTree, "muon_PromptLepton_TrackJetNTrack");  
 
     //Trigger matching
 
@@ -647,13 +665,7 @@ void ttHMultileptonLooseEventSaver::initialize(std::shared_ptr<top::TopConfig> c
       // Add non-prompt muon vars
       Wrap2(muvec, [=](const xAOD::Muon& mu) { return (float) mu.auxdataConst<double>("jetFitterComb"); }, *systematicTree, "muon_jetFitterComb");
 
-      Wrap2(muvec, [=](const xAOD::Muon& mu) {
-	  float m_mu_nonprompt_bdt = -99.;
-	  static SG::AuxElement::Accessor<float> AccessorNonPromptBDT("PromptLepton_TagWeight");
-	  if(AccessorNonPromptBDT.isAvailable(mu)) m_mu_nonprompt_bdt = AccessorNonPromptBDT(mu);
-	  return (float) m_mu_nonprompt_bdt; }, *systematicTree, "muon_PromptLepton_TagWeight");
-
-      std::vector<std::string> short_vars = {"TrackJetNTrack", "sv1_ntkv", "jf_ntrkv"};
+      std::vector<std::string> short_vars = {"sv1_ntkv", "jf_ntrkv"};
       for(std::string &var: short_vars) {
 	Wrap2(muvec, [=](const xAOD::Muon& mu) {
 	    short m_mu_nonprompt_short = -99;
